New Crowdin updates (#1666)

--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -30,7 +30,7 @@
   "api.errors.invalidMnemonicError": "do not translate",
   "api.errors.invalidWitnessError": "La signature n’est pas valide.",
   "api.errors.noInputsError": "Le wallet restauré à partir de votre phrase de secours est vide. Veuillez vérifier votre phrase de secours and retenter de restaurer le wallet.",
-  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
+  "api.errors.noOutputsError": "La transaction nécessite au moins une sortie, mais aucune sortie n'a été ajoutée",
   "api.errors.pendingTransactionError": "Erreur lors de la mise à jour des transactions en cours.",
   "api.errors.poolMissingApiError": "Nous n'avons pas pu trouver ce groupe d'enjeu. Veuillez vérifier l'identifiant (ID) et assurez-vous qu'il ne s'est pas désinscrit.",
   "api.errors.rollbackApiError": "Un retour en arrière a été détecté.",
@@ -88,6 +88,7 @@
   "global.labels.error": "Erreur",
   "global.labels.finish": "Finir",
   "global.labels.goBack": "Retour",
+  "global.labels.keyRegistrationPointer": "Pointeur d'enregistrement de clé",
   "global.labels.loadMore": "En charger plus",
   "global.labels.memo": "Mémo",
   "global.labels.next": "Suivant",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Récompenses",
   "global.labels.save": "Sauvegarder",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Clé de paiement",
+  "global.labels.spendingKeyHash": "Hash de la clé de paiement",
+  "global.labels.stakingKey": "Clé de Staking",
+  "global.labels.stakingKeyHash": "Hash de la clé de staking",
   "global.labels.upgrade": "Mettre à jour",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -302,7 +307,7 @@
   "transfer.summary.recoveredBalance.label": "Solde recouvert",
   "transfer.summary.transactionFee.label": "Frais de transaction",
   "transfer.summary.transferButton.label": "Transférer des fonds",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "Nous avons trouvé des ADA dans votre portefeuille de l'ère Byron. Voulez-vous les transférer dans votre nouveau portefeuille Shelley ?",
   "uri.display.dialog.copy.notification": "URL copiée avec succès",
   "uri.display.dialog.title": "URL générée",
   "uri.display.dialog.usabilityWarning": "Ce lien ne peut être ouvert que par des utilisateurs ayant installé Yoroi sur leurs navigateurs",
@@ -484,8 +489,8 @@
   "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
   "wallet.deprecation.byronLine2": "Pour déléguer votre ADA, vous devrez passer à un portefeuille Shelley.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
-  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
-  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
+  "wallet.hw.incorrectDevice": "Appareil incorrect détecté. Appareil attendu {expectedDeviceId}, mais {responseDeviceId} a été obtenu. Veuillez brancher le bon appareil",
+  "wallet.hw.incorrectVersion": "Détection d'une version incorrecte de l'appareil. Nous supportons la version {supportedVersions} mais vous avez la version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Opération annulée sur le Ledger.",
   "wallet.hw.ledger.common.error.102": "Opération annulée par l'utilisateur.",
   "wallet.hw.ledger.common.error.103": "Ledger est verrouillé, veuillez le déverrouiller et réessayer.",
