--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Hata",
   "global.labels.finish": "Tamamla",
   "global.labels.goBack": "Geri dön",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Daha fazla göster",
   "global.labels.memo": "Memo",
   "global.labels.next": "İleri",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Ödüller",
   "global.labels.save": "Kaydet",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Harcama anahtarı",
+  "global.labels.spendingKeyHash": "Harcama anahtarı hash'i",
+  "global.labels.stakingKey": "Staking anahtarı",
+  "global.labels.stakingKeyHash": "Staking anahtarı hash'i",
   "global.labels.upgrade": "Yükselt",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -302,7 +307,7 @@
   "transfer.summary.recoveredBalance.label": "Kurtarılan bakiye",
   "transfer.summary.transactionFee.label": "İşlem ücretleri",
   "transfer.summary.transferButton.label": "Para Transferi",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "Byron dönemi cüzdanınızda bir miktar ADA bulduk. Yeni Shelley cüzdanınıza aktarmak ister misiniz?",
   "uri.display.dialog.copy.notification": "URL başarıyla kopyalandı",
   "uri.display.dialog.title": "Oluşturulan URL",
   "uri.display.dialog.usabilityWarning": "Bu bağlantı yalnızca tarayıcılarında Yoroi yüklü kullanıcılar tarafından açılabilir",
