--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -88,6 +88,7 @@
   "global.labels.error": "错误",
   "global.labels.finish": "完成",
   "global.labels.goBack": "返回",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "加载更多",
   "global.labels.memo": "备注",
   "global.labels.next": "下一步",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "奖励",
   "global.labels.save": "保存",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "升级",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
