--- a/app/i18n/locales/cs-CZ.json
+++ b/app/i18n/locales/cs-CZ.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Error",
   "global.labels.finish": "Finish",
   "global.labels.goBack": "Go back",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Load more",
   "global.labels.memo": "Memo",
   "global.labels.next": "Next",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "Save",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
