--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Fehler",
   "global.labels.finish": "Beenden",
   "global.labels.goBack": "Zurück",
+  "global.labels.keyRegistrationPointer": "Schlüssel Registrierungszeiger",
   "global.labels.loadMore": "Mehr dazu",
   "global.labels.memo": "Notiz",
   "global.labels.next": "Weiter",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Erträge",
   "global.labels.save": "Speichern",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Ausgabenschlüssel",
+  "global.labels.spendingKeyHash": "Ausgabenschlüssel Prüfsumme",
+  "global.labels.stakingKey": "Staking Schlüssel",
+  "global.labels.stakingKeyHash": "Staking Schlüssel Prüfsumme",
   "global.labels.upgrade": "Aktualisieren",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
