--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Error",
   "global.labels.finish": "Τέλος",
   "global.labels.goBack": "Πήγαινε πίσω",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Load more",
   "global.labels.memo": "Υπόμνημα",
   "global.labels.next": "Επόμενο",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "Αποθήκευση",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Αναβάθμιση",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
