--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -30,7 +30,7 @@
   "api.errors.invalidMnemonicError": "La frase de recuperación ingresada es inválida. Por favor, verifica que sea la correcta.",
   "api.errors.invalidWitnessError": "La firma es inválida.",
   "api.errors.noInputsError": "La billetera restaurada a partir de tu frase de recuperación está vacía. Por favor, verifica tu frase de recuperación, e intenta restaurar la billetera nuevamente.",
-  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
+  "api.errors.noOutputsError": "La transacción requiere al menos una salida, y no se añadió ninguna salida",
   "api.errors.pendingTransactionError": "Error al actualizar las transacciones pendientes.",
   "api.errors.poolMissingApiError": "No se pudo localizar este stake pool. Revisa su ID y asegúrate de que no fue dado de baja.",
   "api.errors.rollbackApiError": "Se detectó un retroceso.",
@@ -88,6 +88,7 @@
   "global.labels.error": "Error",
   "global.labels.finish": "Finalizar",
   "global.labels.goBack": "Regresar",
+  "global.labels.keyRegistrationPointer": "Puntero de registro de clave",
   "global.labels.loadMore": "Cargar más",
   "global.labels.memo": "Memo",
   "global.labels.next": "Siguiente",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Guardar",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Clave de gastos",
+  "global.labels.spendingKeyHash": "Hash de la clave de gastos",
+  "global.labels.stakingKey": "Clave de delegación",
+  "global.labels.stakingKeyHash": "Hash de la clave de delegación",
   "global.labels.upgrade": "Actualización",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -302,7 +307,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Comisiones por transacción",
   "transfer.summary.transferButton.label": "Transferir fondos",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "Encontramos un saldo en tu billetera de la era Byron. ¿Te gustaría transferirlo a tu nueva billetera de Shelley?",
   "uri.display.dialog.copy.notification": "La URL ha sido copiada exitosamente",
   "uri.display.dialog.title": "URL generada",
   "uri.display.dialog.usabilityWarning": "Este enlace sólo puede ser abierto por usuarios que tengan Yoroi instalado en su navegador",
