--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Errore",
   "global.labels.finish": "Finire",
   "global.labels.goBack": "Torna indietro",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Carica di più",
   "global.labels.memo": "Promemoria",
   "global.labels.next": "Prossimo",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Ricompense",
   "global.labels.save": "Salvare",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Aggiornamento",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
