--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -88,6 +88,7 @@
   "global.labels.error": "오류",
   "global.labels.finish": "완료",
   "global.labels.goBack": "돌아가기",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "추가 로드",
   "global.labels.memo": "메모",
   "global.labels.next": "다음",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "보상",
   "global.labels.save": "저장",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
