--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Fout",
   "global.labels.finish": "Klaar",
   "global.labels.goBack": "Ga terug",
+  "global.labels.keyRegistrationPointer": "Sleutel registratie aanwijzer",
   "global.labels.loadMore": "Laad meer",
   "global.labels.memo": "Memo",
   "global.labels.next": "Volgende",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Beloningen",
   "global.labels.save": "Bewaar",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Betaalsleutel",
+  "global.labels.spendingKeyHash": "Vingerafdruk betaalsleutel",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Vingerafdruk stemsleutel",
   "global.labels.upgrade": "Opwaarderen",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "简体中文",
