--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -30,7 +30,7 @@
   "api.errors.invalidMnemonicError": "\nFrase inserida é inválida, por favor, verifique.",
   "api.errors.invalidWitnessError": "A assinatura é inválida.",
   "api.errors.noInputsError": "A carteira restaurada a partir de sua frase de recuperação está vazia. Por favor, verifique sua frase de recuperação e tente a restauração novamente.",
-  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
+  "api.errors.noOutputsError": "A transação necessita de pelo menos uma saída, mas nenhuma foi adicionada",
   "api.errors.pendingTransactionError": "Erro ao atualizar transações pendentes.",
   "api.errors.poolMissingApiError": "Não foi possível encontrar este pool. Verifique duas vezes o ID e verifique se o pool não foi cancelado o registro.",
   "api.errors.rollbackApiError": "Uma reversão foi detectada.",
@@ -88,6 +88,7 @@
   "global.labels.error": "Erro",
   "global.labels.finish": "Terminar",
   "global.labels.goBack": "Retornar",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Carregar mais",
   "global.labels.memo": "Nota",
   "global.labels.next": "Próximo",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Salvar",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -302,7 +307,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Taxas de transação",
   "transfer.summary.transferButton.label": "Transferir fundos",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "Você tem saldo em sua carteira da era Byron. Você gostaria de transferir isso para sua nova carteira da fase Shelley?",
   "uri.display.dialog.copy.notification": "URL copiada com sucesso",
   "uri.display.dialog.title": "URL gerada",
   "uri.display.dialog.usabilityWarning": "Esse link pode ser aberto apenas por usuários com o Yoroi instalado no navegador",
