--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Ошибка",
   "global.labels.finish": "Завершить",
   "global.labels.goBack": "Вернуться назад",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Загрузить больше",
   "global.labels.memo": "Заметка",
   "global.labels.next": "Далее",
@@ -98,6 +99,10 @@
   "global.labels.rewardsLabel": "Награды",
   "global.labels.save": "Сохранить",
   "global.labels.shelleyLabel": "Shelley",
+  "global.labels.spendingKey": "Spending key",
+  "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakingKey": "Staking key",
+  "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
