add banner on time delay

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -124,6 +124,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "These allow you to easily share invoices with friends and businesses by simply clicking a URL.",
   "global.uriSchemeTitleLabel": "Cardano Payment URLs",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "cancel",
   "inline.editing.input.change.label": "change",
   "inline.editing.input.changesSaved": "Your changes have been saved",
