--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Fetching addresses",
   "daedalusTransfer.waiting.title.label": "Daedalus wallet is being restored",
   "daedalusTransfer.waiting.warning": "This may take a long time or fail on poor internet connections",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Copied",
   "global.errors.fieldIsRequired": "This field is required.",
@@ -537,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Generate new address",
   "wallet.receive.page.generateURLLabel": "Generate URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Generated addresses",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Internal addresses (or \"change\" addresses) maintain your privacy by obscuring which addresses belong to you on the blockchain",
   "wallet.receive.page.internalWarning2": "addresses are shown here for personal auditing purposes and should <strong>never</strong> be used.",
   "wallet.receive.page.label": "Label",
