--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Adressen werden abgerufen",
   "daedalusTransfer.waiting.title.label": "Daedalus Wallet wird wiederhergestellt",
   "daedalusTransfer.waiting.warning": "Dies kann lange dauern oder bei schlechten Internet-Verbindungen fehlschlagen",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "den Support kontaktieren",
   "global.copyTooltipMessage": "Kopiert",
   "global.errors.fieldIsRequired": "Dieses Feld muss ausgefüllt werden.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Diese ermöglichen es Dir sehr einfach Rechnungen mit Freunden und Geschäftspartnern durch einfaches Klicken auf eine URL zu teilen.",
   "global.uriSchemeTitleLabel": "Cardano Zahlungs-URLs",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "abbrechen",
   "inline.editing.input.change.label": "ändern",
   "inline.editing.input.changesSaved": "Die Änderungen wurden gespeichert",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Neue Adresse erzeugen",
   "wallet.receive.page.generateURLLabel": "URL erstellen",
   "wallet.receive.page.generatedAddressesSectionTitle": "Erzeugte Adressen",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Interne Adressen (oder \"Wechsel\" Adressen) berücksichtigen Ihre Privatsphäre, indem auf der Blockchain verborgen bleibt welche Adressen zu Ihnen gehören",
   "wallet.receive.page.internalWarning2": "Adressen werden hier zum Zwecke der persönlichen Übersicht angezeigt und Du solltest sie <strong>niemals</strong> verwenden.",
   "wallet.receive.page.label": "Bezeichnung",
