--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Περισυλλογή διευθύνσεων",
   "daedalusTransfer.waiting.title.label": "Γίνεται επαναφορά του πορτοφολιού Daedalus",
   "daedalusTransfer.waiting.warning": "Αυτό ίσως χρειαστεί αρκετή ώρα ή ίσως αποτύχει σε περιπτώσεις κακής σύνδεσης στο διαδίκτυο",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "επικοινωνήστε με την υποστήριξη",
   "global.copyTooltipMessage": "Αντιγράφηκε",
   "global.errors.fieldIsRequired": "Αυτό το πεδίο είναι απαραίτητο.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Αυτά σας επιτρέπουν να μοιραστείτε τιμολόγια με φίλους και επιχειρήσεις εύκολα, απλά κάνοντας κλικ σε μία διεύθυνση (URL).",
   "global.uriSchemeTitleLabel": "Ενιαίοι Εντοπιστές Πόρων (URLs) πληρωμής Cardano",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "ακύρωση",
   "inline.editing.input.change.label": "αλλαγή",
   "inline.editing.input.changesSaved": "Οι αλλαγές σας έχουν αποθηκευτεί",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Δημιουργία νέας διεύθυνσης",
   "wallet.receive.page.generateURLLabel": "Δημιουργία Ενιαίου Εντοπιστή Πόρων (URL)",
   "wallet.receive.page.generatedAddressesSectionTitle": "Δημιουργηθείσες διευθύνσεις",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Internal addresses (or \"change\" addresses) maintain your privacy by obscuring which addresses belong to you on the blockchain",
   "wallet.receive.page.internalWarning2": "addresses are shown here for personal auditing purposes and should <strong>never</strong> be used.",
   "wallet.receive.page.label": "Label",
