--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Obtention des adresses",
   "daedalusTransfer.waiting.title.label": "Le wallet Daedalus est en cours de récupération",
   "daedalusTransfer.waiting.warning": "Cela peut prendre du temps ou échouer si vous avez une mauvaise connexion internet",
+  "global.blog.learnMore": "Pour en savoir plus, vous pouvez lire notre {blogLink}.",
   "global.contact": "contacter l'assistance",
   "global.copyTooltipMessage": "Copié",
   "global.errors.fieldIsRequired": "Veuillez remplir ce champ.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Ceux-ci vous permettent de partager facilement vos factures avec vos amis et entreprises en cliquant simplement sur une URL.",
   "global.uriSchemeTitleLabel": "URLs de Paiement Cardano",
+  "incorrectTime.line1": "ATTENTION : l'heure sur votre ordinateur ne correspond pas à celle de notre serveur. Cela peut entraîner des résultats inattendus",
+  "incorrectTime.line2": "Différence de temps :",
+  "incorrectTime.line3": "Synchronisez l'heure sur votre appareil pour résoudre ce problème",
   "inline.editing.input.cancel.label": "annuler",
   "inline.editing.input.change.label": "modifier",
   "inline.editing.input.changesSaved": "Vos changements on été sauvegardés",
@@ -503,9 +507,9 @@
   "wallet.nav.type.paper": "Wallet Papier",
   "wallet.nav.type.standard": "Wallet standard",
   "wallet.nav.type.trezor": "Wallet Trezor",
-  "wallet.navigation.delegationById": "Délégations par Id",
+  "wallet.navigation.delegationById": "Délégation (ID)",
   "wallet.navigation.delegationDashboard": "Tableau de bord",
-  "wallet.navigation.delegationList": "Liste des délégations",
+  "wallet.navigation.delegationList": "Délégation (liste)",
   "wallet.navigation.receive": "Recevoir",
   "wallet.navigation.send": "Envoyer",
   "wallet.navigation.transactions": "Transactions",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Générer une nouvelle adresse",
   "wallet.receive.page.generateURLLabel": "Générer une URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Adresses générées",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Les adresses internes (ou adresses de \"change\") préservent votre vie privée en masquant les adresses qui vous appartiennent sur la blockchain",
   "wallet.receive.page.internalWarning2": ": ces adresses sont indiquées ici à des fins d'audit personnel et ne doivent <strong>jamais</strong> être utilisées.",
   "wallet.receive.page.label": "Étiquette",
