--- a/app/i18n/locales/id-ID.json
+++ b/app/i18n/locales/id-ID.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Mengambil address",
   "daedalusTransfer.waiting.title.label": "Wallet Daedalus sedang dipulihkan",
   "daedalusTransfer.waiting.warning": "Ini mungkin akan memakan waktu lama atau akan gagal ketika koneksi internet buruk",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Disalin",
   "global.errors.fieldIsRequired": "Isian ini wajib diisi.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Ini memudahkan Anda untuk berbagi faktur dengan teman dan bisnis hanya dengan mengklik URL.",
   "global.uriSchemeTitleLabel": "URLs Pembayaran Cardano",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "batal",
   "inline.editing.input.change.label": "ubah",
   "inline.editing.input.changesSaved": "Perubahan yang Anda buat sudah disimpan",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Buat alamat baru",
   "wallet.receive.page.generateURLLabel": "Generate URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Address yang sudah dibuat",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Internal addresses (or \"change\" addresses) maintain your privacy by obscuring which addresses belong to you on the blockchain",
   "wallet.receive.page.internalWarning2": "addresses are shown here for personal auditing purposes and should <strong>never</strong> be used.",
   "wallet.receive.page.label": "Label",
