--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Recupero degli indirizzi",
   "daedalusTransfer.waiting.title.label": "Il portafoglio Daedalus è in fase di ripristino",
   "daedalusTransfer.waiting.warning": "Questo potrebbe richiedere tempi lunghi o anche fallire su connessioni lente",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contatta il supporto",
   "global.copyTooltipMessage": "Copiato",
   "global.errors.fieldIsRequired": "Questo campo è obbligatorio.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Queste opzioni ti consentono di condividere facilmente le fatture con amici e con aziende semplicemente facendo clic su un URL.",
   "global.uriSchemeTitleLabel": "URL di Pagamento Cardano",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "annulla",
   "inline.editing.input.change.label": "modificare",
   "inline.editing.input.changesSaved": "Le modifiche sono state salvate",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Genera nuovo indirizzo",
   "wallet.receive.page.generateURLLabel": "Generate URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Indirizzi generati",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Gli indirizzi interni (o \"cambio\" indirizzi) mantengono la vostra privacy oscurando quali indirizzi vi appartengono sulla blockchain",
   "wallet.receive.page.internalWarning2": "gli indirizzi qui indicati sono a scopo di verifica personale e non dovrebbero <strong>mai</strong> essere usati.",
   "wallet.receive.page.label": "Label",
