--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Получение адресов",
   "daedalusTransfer.waiting.title.label": "Кошелек Daedalus восстанавливается",
   "daedalusTransfer.waiting.warning": "Это может занять много времени или потерпеть неудачу при плохом интернет-соединении",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "связаться со службой поддержки",
   "global.copyTooltipMessage": "Скопировано",
   "global.errors.fieldIsRequired": "Это поле обязательно к заполнению.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Это позволяет легко обмениваться счетами с друзьями и компаниями, просто щелкнув на URL-адрес.",
   "global.uriSchemeTitleLabel": "Платежные Cardano-URL",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "отменить",
   "inline.editing.input.change.label": "изменить",
   "inline.editing.input.changesSaved": "Ваши изменения сохранены",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Сгенерировать новый адрес",
   "wallet.receive.page.generateURLLabel": "Generate URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Сгенерированные адреса",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Внутренние адреса (или «заменяющие» адреса) поддерживают вашу конфиденциальность, скрывая, какие адреса принадлежат вам в блокчейне",
   "wallet.receive.page.internalWarning2": "здесь показаны адреса в целях личного аудита и <strong>никогда</strong> не должны использоваться.",
   "wallet.receive.page.label": "Label",
