--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "正在获取地址",
   "daedalusTransfer.waiting.title.label": "正在恢复 Daedalus 钱包...",
   "daedalusTransfer.waiting.warning": "这会花费较长时间，网络不佳可能失败",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "联系支持",
   "global.copyTooltipMessage": "已复制",
   "global.errors.fieldIsRequired": "该字段为必填字段。",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "这些功能使您只需单击URL，即可轻松与朋友和企业共享发票。",
   "global.uriSchemeTitleLabel": "Cardano付款网址",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "取消",
   "inline.editing.input.change.label": "更改",
   "inline.editing.input.changesSaved": "您的更改已保存",
@@ -290,7 +294,7 @@
   "transfer.form.masterkey.input.label": "主密钥",
   "transfer.form.masterkey.requirement": "注意：主密钥为192个字符并使用十六进制编码",
   "transfer.instructions.attention.title.label": "注意",
-  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
+  "transfer.instructions.fee.source.disclaimer": "提取资金所需的交易费会从目前选择的钱包中支付。",
   "transfer.instructions.hardware.disclaimer.checkbox": "我确认输入硬件钱包的恢复短语存在巨大的风险。",
   "transfer.instructions.hardware.disclaimer.instructions1": "最初设置硬件钱包时，会要求您在纸上写下恢复短语。输入此短语，您能够将资金从硬件钱包转移到当前的钱包中。",
   "transfer.instructions.hardware.disclaimer.instructions2": "如果使用此功能，则应为硬件钱包生成一个新的恢复短语。如果您不知道为什么或如何执行此操作，我们不建议您使用此功能。",
@@ -307,7 +311,7 @@
   "transfer.summary.recoveredBalance.label": "恢复的余额",
   "transfer.summary.transactionFee.label": "交易手续费",
   "transfer.summary.transferButton.label": "转移资金",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "我们发现了你Byron时期的钱包中尚有ADA。请问需要转移到新的Shelly时期钱包吗？",
   "uri.display.dialog.copy.notification": "成功复制链接地址",
   "uri.display.dialog.title": "生成链接",
   "uri.display.dialog.usabilityWarning": "只有在浏览器上安装了Yoroi的用户才能打开此链接",
@@ -509,7 +513,7 @@
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "发送",
   "wallet.navigation.transactions": "交易",
-  "wallet.nowallet.subtitle": "Please choose a wallet from the top-right dropdown",
+  "wallet.nowallet.subtitle": "请从右上方的下拉框中选择一个钱包",
   "wallet.nowallet.title": "未选择钱包",
   "wallet.problematic.explanation1": "你所选择的钱包{checksumTextPart} 检测到包含一些错误。",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "校验地址",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "生成新地址",
   "wallet.receive.page.generateURLLabel": "生成链接",
   "wallet.receive.page.generatedAddressesSectionTitle": "生成的地址",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "内部地址 (或 \"更改\" 地址) 通过隐藏区块链上属于您的地址来维护您的隐私",
   "wallet.receive.page.internalWarning2": "此处显示的地址仅供个人审核之用，<strong>永远</strong>不要使用。",
   "wallet.receive.page.label": "标签",
