--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Obteniendo direcciones",
   "daedalusTransfer.waiting.title.label": "La billetera de Daedalus está siendo restaurada",
   "daedalusTransfer.waiting.warning": "Esto puede tomar algo de tiempo (o fallar) si la conexión a Internet es deficiente",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contactar con el soporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo es obligatorio.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "Permiten compartir fácilmente facturas con amigos y empresas, con sólo hacer clic en una URL.",
   "global.uriSchemeTitleLabel": "URLs de Pago de Cardano",
+  "incorrectTime.line1": "ADVERTENCIA: La hora de tu ordenador no coincide con la del servidor. Esto puede causar resultados inesperados",
+  "incorrectTime.line2": "Diferencia de tiempo:",
+  "incorrectTime.line3": "Ajusta la hora en tu dispositivo para resolver este problema",
   "inline.editing.input.cancel.label": "cancelar",
   "inline.editing.input.change.label": "cambio",
   "inline.editing.input.changesSaved": "Tus modificaciones se han guardado",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Generar nueva dirección",
   "wallet.receive.page.generateURLLabel": "Generar URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Direcciones generadas",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Las direcciones internas (o direcciones \"cambiantes\") mantienen tu privacidad ocultando en la blockchain las direcciones que te pertenecen.",
   "wallet.receive.page.internalWarning2": "se muestran aquí para propósitos de auditoría personal y <strong>nunca</strong> deberían ser usadas.",
   "wallet.receive.page.label": "Etiqueta",
