--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "アドレスの取得中",
   "daedalusTransfer.waiting.title.label": "ダイダロスウォレットを復元中です...",
   "daedalusTransfer.waiting.warning": "ネットワーク環境が不安定の場合は時間がかかる場合があります",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "サポートにお問い合わせください。",
   "global.copyTooltipMessage": "コピーされました",
   "global.errors.fieldIsRequired": "この項目は必須です。",
@@ -124,6 +125,9 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "これにより、URLをクリックするだけで請求書を友人や会社と簡単に共有することができます。",
   "global.uriSchemeTitleLabel": "Cardano支払いURL",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "キャンセル",
   "inline.editing.input.change.label": "変更",
   "inline.editing.input.changesSaved": "変更が保存されました",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "新しいアドレスを生成する",
   "wallet.receive.page.generateURLLabel": "URLを生成する",
   "wallet.receive.page.generatedAddressesSectionTitle": "生成されたアドレス",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "内部アドレス（おつりアドレス）は、ブロックチェーン上でユーザーがどのアドレスを所有しているかを不明瞭にするすることで、ユーザーのプライバシーを保護します。",
   "wallet.receive.page.internalWarning2": "ここに表示されるアドレスは、個人的な確認のためにのみご利用ください。このアドレスは<strong>ご使用にならないでください</strong>。",
   "wallet.receive.page.label": "ラベル",
