--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Adressen ophalen",
   "daedalusTransfer.waiting.title.label": "De Daedalus portemonnee wordt hersteld",
   "daedalusTransfer.waiting.warning": "Dit kan lang duren of zelfs mislukken bij een slechte internetverbinding",
+  "global.blog.learnMore": "U kunt onze {blogLink} lezen voor meer informatie.",
   "global.contact": "Ondersteuningscontact",
   "global.copyTooltipMessage": "Gekopieerd",
   "global.errors.fieldIsRequired": "Verplicht veld.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "Deze stellen u in staat rekeningen met vrienden of zakelijke partners te delen door eenvoudig op een URL te klikken.",
   "global.uriSchemeTitleLabel": "Cardano betaal URL's",
+  "incorrectTime.line1": "WAARSCHUWING: De tijd op uw computer komt niet overeen met de server. Dit kan tot onverwachte resultaten leiden",
+  "incorrectTime.line2": "Tijdsverschil:",
+  "incorrectTime.line3": "Synchroniseer de tijd op uw apparaat om dit probleem op te lossen",
   "inline.editing.input.cancel.label": "afbreken",
   "inline.editing.input.change.label": "wijzigen",
   "inline.editing.input.changesSaved": "Uw wijzigingen zijn opgeborgen",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Maak een nieuw adres aan",
   "wallet.receive.page.generateURLLabel": "Maak een URL aan",
   "wallet.receive.page.generatedAddressesSectionTitle": "Aangemaakte adressen",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Interne adressen (of aliassen) waarborgen uw privacy door uw adressen te verbergen op de blockchain",
   "wallet.receive.page.internalWarning2": "adressen worden hier weergegeven voor persoonlijke controledoeleinden en mogen <strong> nooit </strong> worden gebruikt.",
   "wallet.receive.page.label": "Label",
