--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Buscando endereços",
   "daedalusTransfer.waiting.title.label": "Carteira Daedalus está sendo restaurada",
   "daedalusTransfer.waiting.warning": "Isso pode levar muito tempo ou falhar em conexões de baixa qualidade",
+  "global.blog.learnMore": "Você pode ler nosso {blogLink} para saber mais.",
   "global.contact": "Contate o suporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo é obrigatório.",
@@ -88,7 +89,7 @@
   "global.labels.error": "Erro",
   "global.labels.finish": "Terminar",
   "global.labels.goBack": "Retornar",
-  "global.labels.keyRegistrationPointer": "Key registration pointer",
+  "global.labels.keyRegistrationPointer": "Apontador chave de registro",
   "global.labels.loadMore": "Carregar mais",
   "global.labels.memo": "Nota",
   "global.labels.next": "Próximo",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Eles permitem que você compartilhe faturas facilmente com amigos e empresas clicando em um URL.",
   "global.uriSchemeTitleLabel": "URLs de pagamento Cardano",
+  "incorrectTime.line1": "Atenção: a hora do seu computador não está igual ao servidor. Isso pode causar resultados inesperados",
+  "incorrectTime.line2": "Diferença de hora:",
+  "incorrectTime.line3": "Sincronize a hora de seu dispositivo para resolver esse problema",
   "inline.editing.input.cancel.label": "cancele",
   "inline.editing.input.change.label": "mudança",
   "inline.editing.input.changesSaved": "Suas mudanças foram salvas",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Gerar novo endereço",
   "wallet.receive.page.generateURLLabel": "Gerar URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Endereços gerados",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Endereços internos (ou \"modificar\" endereços) mantêm sua privacidade ocultando quais endereços pertencem a você na blockchain",
   "wallet.receive.page.internalWarning2": "os endereços são mostrados aqui para fins de auditoria pessoal e <strong> nunca </strong> devem ser usados.",
   "wallet.receive.page.label": "Rótulo",
