--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "İnternet adresleri getiriliyor",
   "daedalusTransfer.waiting.title.label": "Daedalus cüzdanı geri yükleniyor",
   "daedalusTransfer.waiting.warning": "Bu, zayıf internet bağlantısıyla uzun zaman alabilir veya başarısız olabilir",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "iletişim desteği 2",
   "global.copyTooltipMessage": "Kopyalandı",
   "global.errors.fieldIsRequired": "Girilmesi gerekli alan.",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Bunlar, yalnızca bir URL'yi tıklayarak faturaları arkadaşlarınızla ve işletmelerinizle kolayca paylaşmanıza olanak tanır.",
   "global.uriSchemeTitleLabel": "Cardano Ödeme Adresleri",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "iptal",
   "inline.editing.input.change.label": "değiştir",
   "inline.editing.input.changesSaved": "Değişiklikleriniz kaydedildi",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Yeni adres oluştur",
   "wallet.receive.page.generateURLLabel": "URL Oluştur",
   "wallet.receive.page.generatedAddressesSectionTitle": "Oluşturulan adresler",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Dahili adresler (veya \"değiştir\" adresleri), hangi adreslerin blok zincirinde size ait olduğunu gizleyerek gizliliğinizi korur",
   "wallet.receive.page.internalWarning2": "adresler burada kişisel denetim amacıyla gösterilir ve <strong> asla </strong> kullanılmamalıdır.",
   "wallet.receive.page.label": "Etiket",
