--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -61,6 +61,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "獲取地址",
   "daedalusTransfer.waiting.title.label": "正在還原 Daedalus 錢包...",
   "daedalusTransfer.waiting.warning": "這可能需要很長時間，或在互聯網連接不良時失敗",
+  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "聯繫支援",
   "global.copyTooltipMessage": "已複製",
   "global.errors.fieldIsRequired": "此欄位為必填欄。",
@@ -124,6 +125,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "這些功能使您只需單擊URL，即可輕鬆與朋友和企業共享發票。",
   "global.uriSchemeTitleLabel": "Cardano付款網址",
+  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
+  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "取消",
   "inline.editing.input.change.label": "變更",
   "inline.editing.input.changesSaved": "您的變更已儲存",
@@ -534,6 +538,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "產生新地址",
   "wallet.receive.page.generateURLLabel": "Generate URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "已產生地址",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Internal addresses (or \"change\" addresses) maintain your privacy by obscuring which addresses belong to you on the blockchain",
   "wallet.receive.page.internalWarning2": "addresses are shown here for personal auditing purposes and should <strong>never</strong> be used.",
   "wallet.receive.page.label": "Label",
