fix timing for first reward

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -428,7 +428,7 @@
   "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
-  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take 2 epochs. Afterwards, rewards come every epoch",
+  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "Day (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoch ({epochLength} days)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoch (1 day)",
@@ -472,6 +472,7 @@
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
   "wallet.dashboard.summary.title": "Your Summary",
   "wallet.dashboard.upcomingRewards.at": "at",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "no rewards will be earned on this epoch",
   "wallet.dashboard.upcomingRewards.title": "Upcoming Rewards",
   "wallet.dashboard.warning.pendingTx": "Staking dashboard information will update once your pending transaction is confirmed",
