--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Unable to load!",
   "app.errors.unexpectedError": "Something unexpected happened. Please retry.",
   "app.errors.unknowError": "Unknown error.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
   "daedalusTransfer.error.webSocketRestoreError": "Error while restoring blockchain addresses.",
